--- a/style/style.css
+++ b/style/style.css
@@ -6,3 +6,23 @@ main{
     width: auto;
     height: auto;
 }
+.img-corte{
+    height: 920px;
+    width: 100%;
+    max-height: 80vh;
+    background-image: url(../images/home/back-image.png);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.img-fundo{
+    height: 500px;
+    width: 100%;
+    max-height: 80vh;
+    background-image: url(../images/home/image-text.png);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
