--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@ main{
     max-height: 80vh;
     background-image: url(../images/home/back-image.png);
     object-fit: cover;
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -22,6 +23,7 @@ main{
     max-height: 80vh;
     background-image: url(../images/home/image-text.png);
     object-fit: cover;
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
