--- a/style/style.css
+++ b/style/style.css
@@ -1,28 +1,28 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-main{
-    width: auto;
-    height: auto;
+main {
+  width: auto;
+  height: auto;
 }
-.img-corte{
-    height: 920px;
-    width: 100%;
-    max-height: 80vh;
-    background-image: url(../images/home/back-image.png);
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.img-corte {
+  clear: both;
+  height: 920px;
+  width: 100%;
+  max-height: 80vh;
+  background: url(../images/home/back-image.png) center center fixed;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.img-fundo{
-    height: 500px;
-    width: 100%;
-    max-height: 80vh;
-    background-image: url(../images/home/image-text.png);
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.img-fundo {
+  clear: both;
+  height: 100%;
+  width: 100%;
+  max-height: 80vh;
+  background: url(../images/home/image-text.png) center center fixed;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
