--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,8 @@ main {
   width: 100%;
   max-height: 80vh;
   background: url(../images/home/back-image.png) center center fixed;
+  background-position: center;
+  background-attachment: fixed;
   object-fit: cover;
   background-size: cover;
   background-repeat: no-repeat;
