--- a/style/style.css
+++ b/style/style.css
@@ -8,14 +8,13 @@ main {
   background: #000;
 }
 .img-corte {
-  clear: both;
   height: 920px;
   width: 100%;
   max-height: 80vh;
-  background: url(../images/home/back-image.png) center center fixed;
-  background-position: center;
+  background-image: url(../images/home/back-image.png);
   background-attachment: fixed;
   object-fit: cover;
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
