--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ main {
   width: 100%;
   max-height: 80vh;
   background-image: url(../images/home/back-image.png);
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   object-fit: cover;
   background-position: center;
   background-size: cover;
