--- a/style/style.css
+++ b/style/style.css
@@ -28,3 +28,16 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 768px) {
+  .img-corte {
+    height: 920px;
+    width: 100%;
+    max-height: 85vh;
+    background-image: url(../images/home/back-image.png);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: local;
+  }
+}
