--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,9 @@ main {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+#ajustar-fixed {
+  margin-top: 80px;
+}
 .img-fundo {
   clear: both;
   height: 100%;
@@ -29,6 +32,9 @@ main {
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 768px) {
+  #ajustar-fixed {
+    margin-top: 0px;
+  }
   #fixar-nav {
     position: static;
   }
